- downgrade common module to Java 11